MDialog + MSnackbar. Fixed jumps.
https://trello.com/c/0ovJUp8v/20550-editor-jumps-when-saving-a-module
(cherry picked from commit 3921bba6cdf3f0261d920347338a7c8a7b2a9798)

--- a/www/flowjspixi.css
+++ b/www/flowjspixi.css
@@ -205,3 +205,7 @@ dialog::backdrop {
 	width: 0px;
 	height: 0px;
 }
+
+.snackbar {
+	position: fixed;
+}
